@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.825 2019/07/15 22:18:10 nia Exp $
+# $NetBSD: Makefile,v 1.826 2019/07/21 10:09:44 wiz Exp $
 #
 
 COMMENT=	Graphics tools and libraries
@@ -141,7 +141,6 @@ SUBDIR+=	gd
 SUBDIR+=	gdchart
 SUBDIR+=	gdk-pixbuf
 SUBDIR+=	gdk-pixbuf2
-SUBDIR+=	gdk-pixbuf2-jasper
 SUBDIR+=	gdk-pixbuf2-xlib
 SUBDIR+=	geeqie
 SUBDIR+=	gegl
